Fix a bug with the code editor's scrollbars.
The horizontal scrollbar was displayed "inside" the region scrolled by the vertical scrollbar. To scroll horizontally, you first had to scroll all the way down vertically.

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -345,13 +345,12 @@ body {
 	background: white;
 	box-shadow: 0 0 10px rgba(0,0,0,0.5);
 	line-height: 1.5em;
+	display: inline-block;
 }
 
 #content .CodeMirror-scroll {
 	height: auto;
-	overflow-y: hidden;
-	overflow-x: auto;
-	width: 100%;
+	overflow: visible;
 }
 
 #lightbox {
